# form-generator-ui

./: .gitignore  1.generator-front.js  ARCHITECTURE.md  Cargo.toml  README.md  RESSOURCES.md  askama.toml  bootstrap.js  generator-front.js  generator-front.wasm  index.html  package-lock.json  webpack.config.js
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/form_model/: mod.rs
src/app/react_native_formik/: form_template.rs  helpers.rs  mod.rs
src/app/spectre_editor_views/: mod.rs
src/app/spectre_editor_views/components/: button.rs  field_list_container.rs  field_list_item.rs  generated_files_pannel.rs  mod.rs  model_form.rs
src/form_model/: mod.rs
src/react_native/: mod.rs
src/react_native_formik/: form_template.rs  helpers.rs  mod.rs
src/spectre_editor_views/: button.rs  mod.rs
src/spectre_editor_views/components/: button.rs  field_list_container.rs  field_list_item.rs  generated_files_pannel.rs  mod.rs  model_form.rs
static/: index.html  spectre-exp.css  spectre-exp.min.css  spectre.css  spectre.min.css
static/css/: spectre-exp.min.css
templates/react-native-formik/: form.html
