[package]
name = "form-generator-front"
version = "0.1.0"
authors = ["lsmod <1526305+lsmod@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "*"
strum_macros = "*"
askama = "0.8"
Inflector = "0.11.4"
