[package]
name = "form-generator-front"
version = "0.1.0"
authors = ["lsmod <1526305+lsmod@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.58"
wee_alloc = { version = "0.4.4", optional = true }
wasm-logger = "0.2"
yew = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "*"
strum_macros = "*"
askama = "0.8"
Inflector = "0.11.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
